# PoeScout

./: .gitignore  CHANGELOG.md  CHECKLIST.md  CLAUDE.md  Cargo.toml  PLAN.md  package.json  pnpm-lock.yaml
crates/poe-core/: Cargo.toml
crates/poe-core/src/: config.rs  error.rs  types.rs
crates/poe-data/: Cargo.toml
crates/poe-data/sql/: schema.sql
crates/poe-data/src/: db.rs  index.rs  ingest.rs  lib.rs
crates/poe-data/src/models/: bases.rs  mod.rs  mods.rs
crates/poe-maps/: Cargo.toml
crates/poe-maps/src/: areas.rs  db.rs  encounters.rs  lib.rs  parser.rs  session.rs  state.rs  watcher.rs
crates/poe-maps/tests/: replay.rs
crates/poe-maps/tests/fixtures/: sample_client.txt
crates/poe-pob/: Cargo.toml
crates/poe-pob/src/: codec.rs  launch.rs  lib.rs
crates/poe-pricing/: Cargo.toml
crates/poe-pricing/src/: cache.rs  lib.rs  ninja.rs
crates/poe-stash/: Cargo.toml
crates/poe-stash/src/: client.rs  inventory.rs  lib.rs  matcher.rs
docs/: poe-mechanics-resources.md
scripts/: dev-restart.sh  fetch-repoe.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: capture.rs  lookup.rs  maps.rs  mod.rs  pob.rs  stash.rs
