[package]
name = "poe-scout"
version = "0.1.0"
edition = "2024"

[dependencies]
poe-core = { path = "../crates/poe-core" }
poe-data = { path = "../crates/poe-data" }
poe-pob = { path = "../crates/poe-pob" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "poe_scout_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
