[package]
name = "poe-scout"
version = "0.1.0"
edition = "2024"

[dependencies]
poe-core = { path = "../crates/poe-core" }
poe-data = { path = "../crates/poe-data" }
poe-pob = { path = "../crates/poe-pob" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
enigo = "0.3"
arboard = "3"
windows = { version = "0.61", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_System_Threading"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "poe_scout_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
