[package]
name = "poe-data"
version = "0.1.0"
edition = "2024"

[dependencies]
poe-core = { path = "../poe-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
rusqlite.workspace = true
reqwest.workspace = true
