[package]
name = "poe-maps"
version = "0.1.0"
edition = "2024"

[dependencies]
poe-core = { path = "../poe-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
rusqlite.workspace = true
chrono = { version = "0.4", features = ["serde"] }
regex = "1"

[dev-dependencies]
tempfile = "3"
